## $Id: Makefile.am,v 1.19 2002/12/18 18:38:53 kir Exp $

EXTRA_DIST = aspseek-cfg.h.in paths.h.in my_hash_map.in my_hash_set.in

noinst_HEADERS = \
acl.h \
affix.h \
aspseek.h \
buddy.h \
cache.h \
ccom.h \
charsets.h \
config.h \
content.h \
crc32.h \
daemon.h \
datasource.h \
datetime.h \
defines.h \
delmap.h \
deltas.h \
documents.h \
event.h \
excerpts.h \
filters.h \
geo.h \
hrefs.h \
index.h \
lastmod.h \
logger.h \
maps.h \
md5.h \
mimeconv.h \
misc.h \
mysqldb.h \
mysqldbi.h \
orcl8sqldb.h \
orcl8sqldbi.h \
parse.h \
parser.h \
protocol.h \
qparser.h \
rank.h \
resolve.h \
scanner.h \
search.h \
sock.h \
sqldb.h \
sqldbi.h \
squeue.h \
stack.h \
stopwords.h \
streams.h \
templates.h \
timer.h \
ucharset.h \
unaligned.h \
url.h \
urlfilter.h \
wcache.h
